Transplant ZGC legacy single-generation mode as X
Co-authored-by: Axel Boldt-Christmas <aboldtch@openjdk.org>